# Modular-Android-App

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  build.sh
.github/workflows/: ci.yml
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/modularandroidapp/: DownloadReceiver.kt  DownloadService.kt  LibraryManager.kt  MainActivity.kt  NotificationService.kt  RustBridge.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
rust/: .gitignore  Cargo.toml  README.md  build.rs  build_android.sh
rust/.cargo/: config.toml
rust/src/: async_worker.rs  jni_bridge.rs  lib.rs  native_activity.rs  notifications.rs  sensors.rs  slint_ui.rs  utils.rs
rust/ui/: app.slint
