[package]
name = "mainlogic"
version = "0.1.0"
edition = "2021"

[lib]
name = "mainlogic"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
slint = { version = "1.11", features = ["backend-android-activity-06"] }
slint-build = "1.11"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"
log = "0.4.20"
android = "0.0.1"

[build-dependencies]
slint-build = "1.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true 